--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 		<li class="nav-article-example" role="presentation"><a href="#">Work</a></li>
 		<li class="nav-about-us" role="presentation"><a href="about.html">About</a></li>
 		<li class="nav-author-page" role="presentation"><a href="#">Resume</a></li>
-		<li class="nav-author-page" role="presentation"><a href="contact.html">Contact</a></li>
+		<li class="nav-author-page" role="presentation"><a href="https://form.123formbuilder.com/5889989/my-form">Contact</a></li>
 		<span class="socialheader">
 		<a href="#"><span class='symbol'>circletwitterbird</span></a>
 		<a href="#"><span class='symbol'>circlefacebook</span></a>
 		<a href="#"><span class='symbol'>circlegoogleplus</span></a>
-		<a href="mailto:wowthemesnet@gmail.com"><span class='symbol'>circleemail</span></a>
+		<a href="mailto:paterbulimo8@gmail.com"><span class='symbol'>circleemail</span></a>
 		</span>
 	</ul>
 	</nav>
