--- a/page2.html
+++ b/page2.html
@@ -23,7 +23,7 @@
 		<a href="#"><span class='symbol'>circletwitterbird</span></a>
 		<a href="#"><span class='symbol'>circlefacebook</span></a>
 		<a href="#"><span class='symbol'>circlegoogleplus</span></a>
-		<a href="mailto:wowthemesnet@gmail.com"><span class='symbol'>circleemail</span></a>
+		<a href="mailto:paterbulimo8@gmail.com"><span class='symbol'>circleemail</span></a>
 		</span>
 	</ul>
 	</nav>
