--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <title>PETER| BLOG</title>
-<meta name="description" content="Thoughts, reviews and ideas since 1999."/>
+<meta name="description" content="Thoughts, ideas, designs."/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="shortcut icon" href="#">
 <!-- <link rel="icon" href=".ico" /> -->
-
+<link rel="icon" type="image/png" href="/favicon.png"/>
 <link rel="stylesheet" type="text/css" href="assets/css/screen.css"/>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,300italic,300,400italic,700,700italic|Playfair+Display:400,700,400italic,700italic"/>
 </head>
